# laarid_package_android-frameworks-native

./: .travis.yml  Makefile.am  android-frameworks-native-0.0.pc.in  configure.ac
cmds/atrace/: Android.mk  atrace.cpp
cmds/bugreport/: Android.mk  bugreport.cpp
cmds/bugreportz/: Android.mk  bugreportz.cpp
cmds/cmd/: Android.mk  cmd.cpp
cmds/dumpstate/: Android.mk  dumpstate.cpp  dumpstate.h  utils.cpp
cmds/dumpsys/: Android.mk  dumpsys.cpp
cmds/ip-up-vpn/: Android.mk
cmds/service/: Android.mk
cmds/servicemanager/: Android.mk  binder.c  binder.h  service_manager.c
debian/: README  README.source  android-frameworks-native-bin.install  android-frameworks-native-headers.install  android-sensorservice.install  android-servicemanager.install  android-servicemanager.servicemanager.service  android-servicemanager.udev  changelog  control  copyright  libandroid-batteryservice0-dev.install  libandroid-batteryservice0.install  libandroid-batteryservice0.lintian-overrides  libandroid-batteryservice0.symbols  libandroid-batteryservice0.symbols.armel  libandroid-batteryservice0.symbols.i386  libandroid-binder0-dev.install  libandroid-binder0.install  libandroid-binder0.lintian-overrides  libandroid-diskusage0-dev.install  libandroid-diskusage0.install  libandroid-diskusage0.lintian-overrides  libandroid-diskusage0.symbols  libandroid-egl0-dev.install  libandroid-egl0.install  libandroid-egl0.lintian-overrides  libandroid-egl0.symbols  libandroid-etc1-0-dev.install  libandroid-etc1-0.install  libandroid-etc1-0.lintian-overrides  libandroid-etc1-0.symbols  libandroid-glesv1-cm0-dev.install  libandroid-glesv1-cm0.install  libandroid-glesv1-cm0.lintian-overrides  libandroid-glesv1-cm0.symbols  libandroid-glesv2-0-dev.install  libandroid-glesv2-0.install  libandroid-glesv2-0.lintian-overrides  libandroid-glesv2-0.symbols  (+38 more)
include/: Makefile.inc
include/android/: asset_manager_jni.h  bitmap.h  native_activity.h  native_window_jni.h
include/binder/: Parcel.h
include/input/: Input.h  KeyCharacterMap.h
include/media/hardware/: HardwareAPI.h
include/media/openmax/: OMX_Audio.h  OMX_AudioExt.h  OMX_Component.h  OMX_Core.h  OMX_IVCommon.h  OMX_Image.h  OMX_Index.h  OMX_IndexExt.h  OMX_Other.h  OMX_Video.h  OMX_VideoExt.h
libs/binder/: Android.mk  Binder.cpp  IMemory.cpp  IPCThreadState.cpp  MemoryDealer.cpp  Parcel.cpp  PersistableBundle.cpp  Static.cpp  android-binder-0.0.pc.in
libs/binder/tests/: Android.mk  binderDriverInterfaceTest.cpp  binderLibTest.cpp  binderThroughputTest.cpp
libs/diskusage/: Android.mk  android-diskusage-0.0.pc.in
libs/gui/: Android.mk  BufferQueueConsumer.cpp  GLConsumer.cpp  Sensor.cpp  SyncFeatures.cpp  android-gui-0.0.pc.in
libs/gui/tests/: Android.mk  SRGB_test.cpp  SurfaceTextureClient_test.cpp
libs/input/: Android.mk  Input.cpp  KeyCharacterMap.cpp  android-input-0.0.pc.in
libs/input/tests/: Android.mk  InputEvent_test.cpp  InputPublisherAndConsumer_test.cpp  StructLayout_test.cpp  TestHelpers.h
libs/ui/: Android.mk  Fence.cpp  GraphicBufferMapper.cpp  Region.cpp  android-ui-0.0.pc.in
libs/ui/tests/: Android.mk
opengl/include/EGL/: eglplatform.h
opengl/libagl/: context.h  egl.cpp
opengl/libs/: Android.mk
opengl/libs/EGL/: android-egl-0.0.pc.in  export.c
opengl/libs/ETC1/: android-etc1-0.0.pc.in
opengl/libs/GLES2/: android-glesv2-0.0.pc.in  export.c
opengl/libs/GLES_CM/: android-glesv1_cm-0.0.pc.in  export.c
services/batteryservice/: Android.mk  android-batteryservice-0.0.pc.in
services/inputflinger/: Android.mk  EventHub.cpp  InputDispatcher.h  InputManager.h  InputReader.h  InputWindow.h  android-inputflinger-0.0.pc.in
services/powermanager/: Android.mk  android-powermanager-0.0.pc.in
services/sensorservice/: Android.mk  SensorInterface.cpp  SensorService.cpp  SensorService.h  android-sensorservice-0.0.pc.in  main_sensorservice.cpp
services/sensorservice/tests/: Android.mk  sensorservicetest.cpp
services/surfaceflinger/: SurfaceFlinger.cpp  SurfaceFlinger_hwc1.cpp
services/surfaceflinger/RenderEngine/: RenderEngine.cpp
vulkan/include/vulkan/: vk_platform.h
